--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
             <h3 class="mb-0"><li><a href="zhima.html">Zhima Credit</a> <br>
 </li></h3><br>
 			  <h3 class="mb-0"><li><a href="PAI.html">Alibaba Platform for AI</a> <br>
+</li></h3><br>
+			  <h3 class="mb-0"><li><a href="https://honorable-salesman-49a.notion.site/Machine-learning-in-Python-c710bf546a3e4dc497c4ffd1d0515f28"  target="_blank">Machine Learning in Python</a> <br>
 </li></h3>
           </div>
         </div>
@@ -126,9 +128,9 @@
 			  </p>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><li><a href="https://github.com/fridaymonday123/everything-about-multiple-instance-learning">Everything about multiple instance learning</a> <br>
+            <h3 class="mb-0"><li><a href="https://github.com/fridaymonday123/everything-about-multiple-instance-learning" target="_blank">Everything about multiple instance learning</a> <br>
 </li></h3><br>
-            <h3 class="mb-0"><li><a href="https://github.com/fridaymonday123/everything-about-imbalanced-learning">Everything about imbalanced learning</a> <br>
+            <h3 class="mb-0"><li><a href="https://github.com/fridaymonday123/everything-about-imbalanced-learning" target="_blank">Everything about imbalanced learning</a> <br>
 </li></h3><br>			 
           </div>
         </div>
