--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="xiaoguang_CV.pdf">CV</a>
+          <a class="nav-link js-scroll-trigger" href="https://honorable-salesman-49a.notion.site/Resume-of-Xiaoguang-Benjamin-Wang-4fcb5cc4bf7f4e189252c88b4bc8b400">CV</a>
         </li>
       </ul>
     </div>
