--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="https://honorable-salesman-49a.notion.site/Resume-of-Xiaoguang-Benjamin-Wang-4fcb5cc4bf7f4e189252c88b4bc8b400" target="_blank">CV</a>
+          <a class="nav-link js-scroll-trigger" href="https://xiaoguangwang.notion.site/Resume-of-Xiaoguang-Benjamin-Wang-4fcb5cc4bf7f4e189252c88b4bc8b400" target="_blank">CV</a>
         </li>
       </ul>
     </div>
@@ -110,7 +110,7 @@
 </li></h3><br>
 			  <h3 class="mb-0"><li><a href="PAI.html">Alibaba Platform for AI</a> <br>
 </li></h3><br>
-			  <h3 class="mb-0"><li><a href="https://honorable-salesman-49a.notion.site/Machine-learning-in-Python-c710bf546a3e4dc497c4ffd1d0515f28"  target="_blank">Machine Learning in Python</a> <br>
+			  <h3 class="mb-0"><li><a href="https://xiaoguangwang.notion.site/Machine-learning-in-Python-c710bf546a3e4dc497c4ffd1d0515f28"  target="_blank">Machine Learning in Python</a> <br>
 </li></h3>
           </div>
         </div>
