--- a/index.html
+++ b/index.html
@@ -104,14 +104,9 @@
 			  </p>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><li><a href="AIOps.html">AIOps</a> <br>
-</li></h3><br>
-            <h3 class="mb-0"><li><a href="zhima.html">Zhima Credit</a> <br>
-</li></h3><br>
-			  <h3 class="mb-0"><li><a href="PAI.html">Alibaba Platform for AI</a> <br>
-</li></h3><br>
-			  <h3 class="mb-0"><li><a href="https://xiaoguangwang.notion.site/Machine-learning-in-Python-c710bf546a3e4dc497c4ffd1d0515f28"  target="_blank">Machine Learning in Python</a> <br>
-</li></h3>
+            <h3 class="mb-0"><a href="https://xiaoguangwang.vercel.app/my-ai-projects" target="_blank">
+				 <img src="images/projects.jpg" width="800" height="400" alt=""/></a><br>
+</h3><br>
           </div>
         </div>
     </div>
@@ -128,9 +123,9 @@
 			  </p>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><li><a href="https://github.com/fridaymonday123/everything-about-multiple-instance-learning" target="_blank">Everything about multiple instance learning</a> <br>
+            <h3 class="mb-0"><li><a href="https://xiaoguangwang.vercel.app/everything-about-multiple-instance-learning" target="_blank">Everything about multiple instance learning</a> <br>
 </li></h3><br>
-            <h3 class="mb-0"><li><a href="https://github.com/fridaymonday123/everything-about-imbalanced-learning" target="_blank">Everything about imbalanced learning</a> <br>
+            <h3 class="mb-0"><li><a href="https://xiaoguangwang.vercel.app/everything-about-imbalanced-learning" target="_blank">Everything about imbalanced learning</a> <br>
 </li></h3><br>			 
           </div>
         </div>
